--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,8 +1,11 @@
 body {
     background-color: #2F89C9;
     display: flex;
+    justify-content: center;
+    align-items: center;
   }
 .logo{ 
+  display: flex;
 justify-content: center;
 align-items: center;
 }
