--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -15,3 +15,9 @@ body {
 img#enter:hover{
   cursor:pointer ;
 }
+
+img#enter{
+  width: 50%;
+  height: auto; /* Maintains aspect ratio */
+  display: block;
+}
