--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -10,6 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 img#enter:hover{
@@ -17,7 +18,7 @@ img#enter:hover{
 }
 
 img#enter{
-  width: 50%;
+  width: 25%;
   height: auto; /* Maintains aspect ratio */
   display: block;
 }
