--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -7,7 +7,7 @@ body {
   }
 
 .logo{
-  margin-top: 10%;
+  margin-top: 25;
   display: flex;
   flex-direction: column;
   justify-content: center;
