--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: #2F89C9;
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     
   }
 
