--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -7,13 +7,20 @@ body {
   }
 
 .logo{
-  margin-top: 10%;
-  margin-left: 10%;
+  margin-top: 5%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   row-gap: 10px;
+}
+@media screen and (max-width: 600px) {
+
+.logo{
+  margin-top: 10%;
+  margin-left: 10%;
+}
+
 }
 
 img#enter:hover{
