--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -151,7 +151,7 @@ img#enter{
 #menu
 {
   position: absolute;
-  max-width: 400px;
+  max-width: 50%;
   width: 100vw;
   max-height: 100vh;
   margin: -100px 0 0 -50px;
