--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -94,7 +94,7 @@ img#enter{
   margin-bottom: 5px;
   position: relative;
   
-  background: #cdcdcd;
+  background: #341D7B;
   border-radius: 3px;
   
   z-index: 1;
