--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -188,3 +188,13 @@ img#enter{
 {
   transform: none;
 }
+
+
+.blurred {
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+    background-color: #eee;
+}
