--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -190,7 +190,7 @@ img#enter{
 }
 
 
-.blurred .menu:after {
+.blurred {
     -webkit-filter: blur(5px);
     -moz-filter: blur(5px);
     -o-filter: blur(5px);
